# LexGuard-AI

./: .dockerignore  .env  .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml  run.ps1  test.ps1
api/: cli.py  main.py
api/clients/: bedrock_client.py  opensearch_client.py
api/core/: logging.py  settings.py
api/middleware/: request_context.py
api/routes/: llm_routes.py  opensearch_routes.py
retrieval/: filters.py
tests/: test_health.py
