[tool.poetry]
name = "lexguard-ai"
version = "0.1.0"
description = "Local-first FastAPI backend"
authors = ["You <you@example.com>"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
fastapi = "^0.115.0"
uvicorn = { extras = ["standard"], version = "^0.30.0" }
boto3 = "^1.35.0"
opensearch-py = "^2.6.0"
pydantic = "^2.8.0"
pydantic-settings = "^2.12.0"
python-dotenv = "^1.0.1"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.2"
httpx = "^0.27.0"

[tool.poetry.scripts]
api = "api.cli:run"
test = "api.cli:test"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
